Popravljeni i dovrseni BillServiceImpl InventoryServiceImp MenuItemServiceImpl MenuServiceImpl OrderItemServiceImpl OrderServiceImpl Dodat UUID Exception i UUIDUtils za citljiviji kod